--- a/style.css
+++ b/style.css
@@ -94,3 +94,11 @@ footer {
   font-size: 13px;
   color: #ccc;
 }
+
+#visitor-count {
+  font-size: 18px;
+  font-weight: bold;
+  color: #0CE1F0; /* থিমের সাথে ম্যাচ করবে */
+  margin-top: 10px;
+  }
+  
